website/main-pages/ballerina.io-website-theme/css/philosophy-page.css
/*PHIL*/

#iBallerinaFooter {
    margin-top: -9px;
}

.cPhil-title-boxes {
    width: 100%;
     padding-left: 0px;
   background-image: url("/img/arrow-left-gray.svg");
    background-repeat: no-repeat;
    background-position: 15px center;
    
    
}

.cPhil-title-boxes.cPhil-title-boxes-white {
/*     background-image: url("../img/arrow-left-white.svg");*/
background-image: none;
}

.cPhil-title-boxes-container {
    padding: 6px 25px;
    background-color: #f5f6f6;
    display: inline-block;
    margin-bottom: 20px;
    padding-bottom: 10px;
    width: 100%;
    padding-top: 25px;
}

.cPhil-title-boxes-container.cPhil-title-boxes-container-white {
    background-color: #ffffff;
    margin-bottom: 10px;
}

.cPhil-title-boxes p {
    font-size: 14px;
    line-height:20px; 
}

.cPhil-title-boxes h3 {
    font-family: "CalibreWeb-Semibold";
    text-transform: uppercase;
    color: #23b8b1;
    font-size: 18px;
    font-weight: bold;
    padding: 0;
/*    margin: 0;*/
margin-top: 10px;
    font-weight: 800;
    margin-bottom: 5px;
    
}

.cGreenTitle.cPhil-box-titles {
    color: #22b7b1;
    margin-top: -50px;
}


.row.cBallerina-io-Gray-row.cPhilosophy {
    padding-bottom: 90px;
}
.row.cBallerina-io-Gray-row.cPhilosophy.cPhilosophy2  {
    padding-top: 90px;
}
.cBallerina-io-Home-Right-col.cPhilosophy-Logics {
   
}

.cPhilosophyWhite  {
    padding-bottom: 50px;
}

.cPhilosophyWhite.cHowballerinaworks {
    margin-bottom: 30px;
}

.cPhilosophyWidgetContainer {
/*    background-color: #ffffff;*/
    width: 100%;
    display: inline-block;
    position: relative;
/*    height: 500px;*/
}
.cPhilosophyWidgetInnerBox {
    
    width: 100%;
    text-align: center;
    background-color: transparent;
    padding-left: 30px;
}
.cPhilosophyWidgetInnerBox .tab-pane {
    background-color: #ffffff;
    width: 100%;
    padding: 30px;
     box-shadow: -5px 6px 8px rgba(0, 0, 0, 0.2);
     transition: all 0.2s ease 0s;
}
.cPhilosophyWidgetInnerBox img {
width: 100%;
}

.nav-pills > li {
      -webkit-transform: rotate(-90deg);
    -moz-transform: rotate(-90deg);
    -o-transform: rotate(-90deg);
    -ms-transform: rotate(-90deg);
    transform: rotate(-90deg);
    width: 100px;
    height:30px;
    position: absolute;
    left: 0;
}

.nav-pills > li.active , .nav-pills > li.active a {
    background-color: #ffffff !important;
    color: #585556 !important;
/*    box-shadow: inset 0px 0px 0px rgba(0, 0, 0, 0.0) !important;*/


}

.nav-pills > li.active a {
    box-shadow: none !important;
}

ul.cPhilosophyWidgetControls  {
    position: absolute;
position: absolute;
top: 35px;
left: -52px;

}

.nav-pills > li.cRUNTIME {
    top: 15px;
    left: 2px;
    width: 130px;
} 
.nav-pills > li.cDEPLOYMENT {
    top: 145px;
    width: 130px;
    
}

.nav-pills > li.cLIFECYCLE {
    top: 274px;
    width: 130px;
}


.cPhilosophyWidgetControls li {
    box-shadow: -5px -7px 8px rgba(0, 0, 0, 0.2);
    
/*    box-shadow: -5px -14px 19px rgba(0, 0, 0, 0.2);*/
}
.cPhilosophyWidgetControls li > a {
    width: 130px;
    border: 1px solid #ffffff;
    padding: 0;
    margin: 0;
    text-align: center;
    height: 30px;
    border-radius: 0;
    font-family: "CalibreWeb-Semibold";
    font-size: 14px;
    letter-spacing: 2px;
    background: #e7eaeb;
    line-height: 25px;
    color: #585556;
    font-weight: 200;
/*-webkit-box-shadow: inset 0px 53px 5px -37px rgba(0,0,0,0.38);
-moz-box-shadow: inset 0px 53px 5px -37px rgba(0,0,0,0.38);
box-shadow: inset 0px 53px 5px -37px rgba(0,0,0,0.38);*/
    
}

.cPhilosophyWidgetControls li > a:hover {
    background: #e7eaeb !important;
}
.cPhilosophyWidgetControls li.active > a:hover {
    background: #ffffff !important;
}

/*.cPhilosophyWidgetControls li > a:hover , .cPhilosophyWidgetControls li:hover {
    box-shadow: none !important
} */

.cPhil-title-boxes-container.cPhil-title-boxes-container-white h3 {
    color: #585556;
    font-size: 15px;
    font-weight: 400;
    letter-spacing: 1px;
    line-height: 20px;
}

.cPhil-title-boxes-container.cPhil-title-boxes-container-white p {
    margin-bottom: 10px;
    line-height: 20px;
}

.cRuntimeContent , .cDeploymentContent , .cLifecycleContent {
    display: none;
}
.cRuntimeContent.cShow , .cDeploymentContent.cShow , .cLifecycleContent.cShow {
    display: block;
} 
.cCloudNativeControls {
    padding-left: 0;
}
.cCloudNativeControls ul {
    padding: 0;
    margin-bottom: 30px;
}
.cCloudNativeControls li , .cCloudNativeControls li a {
    list-style: none;
  
    font-family: "CalibreWeb-Semibold";
    font-size: 16px;
    letter-spacing: 1px;
 font-weight: 400;
    line-height: 24px;
    color: #585556;
    text-transform: uppercase;
    cursor: pointer;
}

.cCloudNativeControls li.activelink {
    color: #23b8b1;
}


.cPhilosophyWhite.cCloudNative {
    padding-bottom: 20px;
    padding-left: 0;
    padding-right: 0;
}
.cPhil-title-boxes-container.cPhil-title-boxes-container-white.cPhil-title-boxes-Gray {
    background-color: #f5f6f6;
    background-image: none;
    width: 100%;
}
.cPhil-title-boxes.cCloudNative {
    background-image: none;
}

.cPhil-title-boxes-container.cPhil-title-boxes-container-white.cPhil-title-boxes-Gray p {
    padding: 0;
    margin: 0;
    width: 100%;
}

.cCloudNativeCode {
    background-color: #f5f6f6;
width: 100%;
padding: 30px;
box-shadow: -5px 6px 8px rgba(0, 0, 0, 0.2);
transition: all 0.2s ease 0s
}

.cCloudNativeCode .view-lines {
    background-color: #ffffff !important;
}
.cIntegrationCode {
       background-color: #ffffff;
width: 100%;
padding: 30px;
box-shadow: -5px 6px 8px rgba(0, 0, 0, 0.2);
transition: all 0.2s ease 0s
}

.cIntegrationCode .view-lines {
    background-color: #f5f6f6;
    
}

/*.cCloudNativeCode , .cIntegrationCode {
    padding-top: 30px;
}*/

.cCloudNativeContainer , .cIntegrationFramework {
/*    padding-top: 17%;*/
}
.cLanguageFeaturesContainer {
    background: #f5f6f6;
    padding: 40px 30px;
    display: inline-block;
    width: 100%;
    
}
.cLanguageFeatures li {
    list-style: none;
    padding: 5px 0;
    border-bottom: 1px solid #cecfd0;
    width: 100%;
    font-size: 14px;
    padding-left: 10px;
    color: #57595d;
    line-height: 22px;
    font-weight: 200;
}
.cLanguageFeatures li.cTableTitle {
    padding-left: 0;
    font-weight: 600;
}
.cLanguageFeatures ul {
    padding: 0;
    margin: 0;
    border-top: 1px solid #cecfd0;
}

.cLanguageFeatures li a {
    color: #57595d !important;
}
.cLanguageFeatures li a:hover {
    color: #3ad1ca !important;
}

.cOpenSourceContainer {
    background: #f5f6f6;
    padding: 40px 30px;
    display: inline-block;
    width: 100%;
}

.OpenSourceTable {
    width: 100%;
    font-size: 16px;
    line-height: 24px;
    font-weight: 200;
    
}
.OpenSourceTable td {
    border-bottom: 1px solid #cecfd0;
    padding: 5px 0;
    text-align: left;
    vertical-align: top;
    height: 50px;
}
.OpenSourceTable td:first-child {
    padding-right: 20px;
    white-space: nowrap;
}
.OpenSourceTable td a {
   color: #23b8b1;
}
.OpenSourceTable td:nth-child(3) {
    width: 26px;
}

.cType {
    width: 20%;
}
.OpenSourceTable td.cGitLink {
    text-align: right; 
} 
.OpenSourceTableRightWrapper{
    padding-left: 40px;
}
@media (max-width: 992px) { 
    .OpenSourceTableRightWrapper{
        padding-left: 15px;
    }
    .OpenSourceTable td:first-child{
        width: 170px;
    }
}
.cGitLink a {
    
 background-repeat: no-repeat;
 background-image: url("../img/github-logo.svg");
 width: 20px;
 height: 20px;
 background-size: 100%;
 display: inline-block;
 
}


/*Why did we build Ballerina? */

.cPhil-Gray , .cPhil-green {
   
    
    font-size: 26px;
    text-align: center;
    color: #ffffff;
    display: inline-block;
    width: 100%;
    min-height: 360px;
    
}

.cPhil-green {
    
      background-color: #20b6af;
    
}
.cPhil-Gray {
    background-color: #e7eaeb;
}




.cPhil-Gray h4 {
   color: #57595d;
background: #e7eaeb;
padding: 24px 25px 0;
width: 100%;
margin: 0;
font-size: 20px;
text-align: left;
font-weight: 400;
line-height: 24px;
font-family: "CalibreWeb-Semibold";
text-transform: uppercase;
letter-spacing: 1px;
}

.ch4Container {
    padding: 25px;
    padding-top: 0;
    
}

.ch4Container h4 {
    text-align: center;
    padding: 10px 0;
    width: 100%;
    border: 1px solid #57595d;
    padding-top: 10px;
    
}


.cPhil-Gray p {
    padding: 24px 25px;
    text-align: left;
    margin-bottom: 0;
    
    
}


.cPhil-green span {
/*    padding: 140px 0 40px 0;
    display: inline-block;
    */
       margin: 75px 0 40px 0;
    display: inline-block;
/*    width: 100%;
    padding-left: 30px;
    background-image: url("../img/arrow-left-gray.svg");
    background-repeat: no-repeat;*/
/*    background-position: 15px center;*/
    border: 1px solid #ffffff;
    border-radius: 50%;
    padding: 53px;
    height: 230px;
    width: 230px;
    
    
/*        width: 100%;
     padding-left: 30px;
   background-image: url("../img/arrow-left-gray.svg");
    background-repeat: no-repeat;
    background-position: 15px center;*/
}

.cPhilosophy-widget {
    padding: 0 15px;
}


.cPhil-green-left , .cPhil-green-right {
      background-image: url("../img/white-arrow.svg");
    background-repeat: no-repeat;

    min-height:  360px;
}

.cPhil-green-left {
        background-position: -14px center;
}

.cPhil-Gray .cPhil-green-left p {
    padding-bottom: 45px;
}
.cPhil-green-right {
    background-position: 16px center;
}

.cPhilosophy-widget-left p {
    text-align: left;
    margin-bottom: 0px;
}

.cPhilosophy-widget-right h4 {
    text-align: right;
}
.cPhilosophy-widget-container {
    display: inline-block;
    padding-bottom: 0px;
}

.cPhilosophyWhite-widget-bottom-text {
    padding-bottom: 0;
}


.cCloudNative-code-sections {
    display: inline-block;
    width: 100%;
}

.cPhil-title-boxes.cPhil-title-boxes-white.cGray-box  .cPhil-title-boxes-container.cPhil-title-boxes-container-white {
    background-color: #f5f6f6;
    width: 100%;
}

.cCloudNative-code-sections {
    display: none;
}
.cCloudNative-code-sections.cActiveBox {
    display: block;
}

.cOutput .highlight pre {
    background-color: #585a5e;
    color: #3ad1ca;
    padding: 10px;
    text-align: left;
    border-radius: 0;
    font-size: 14px;
    margin-bottom:0;
    white-space: pre;
}
div.cPhilosophyWidgetContainer.codeNativeBox{
    text-align: left;
    position: relative;
}
.codeNativeBox {
    text-align: left;
    padding: 20px;
    background: #f2f3f4;
}
.shell-display {
    min-height: 50px;
}
.cActive{
    color: #22b7b1 !important
}
.paddingRemove{
    padding-left: 0;
    padding-bottom: 40px;
    margin-left: 0;
}
.cInnerPageContentCol{
    padding-left: 0;
}

